--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "mini-css-extract-plugin",
-  "version": "0.4.2",
+  "name": "@randomjs/mini-css-extract-plugin",
+  "version": "0.5.0",
   "description": "extracts CSS into separate files",
   "license": "MIT",
   "repository": "webpack-contrib/mini-css-extract-plugin",
